@@ -870,6 +870,9 @@ Release 0.19.0 - Unreleased
     HADOOP-4236. Ensure un-initialized jobs are killed correctly on
     user-demand. (Sharad Agarwal via acmurthy) 
 
+    HADOOP-4373. Fix calculation of Guaranteed Capacity for the
+    capacity-scheduler. (Hemanth Yamijala via acmurthy) 
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
